--- a/index.html
+++ b/index.html
@@ -1,244 +1,244 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EREBUS</title>
-<style>
-  :root {
-    --color-primary: #000;
-    --color-secondary: #555;
-    --color-background: #fff;
-    --color-accent: #e0e0e0;
-    --color-text: #333;
-    --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EREBUS</title>
+  <style>
+    :root {
+      --color-primary: #000;
+      --color-secondary: #555;
+      --color-background: #fff;
+      --color-accent: #e0e0e0;
+      --color-text: #333;
+      --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
 
-  * { margin: 0; padding: 0; box-sizing: border-box; }
-  body { font-family: var(--font-family); background-color: var(--color-background); color: var(--color-text); line-height: 1.6; }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: var(--font-family); background-color: var(--color-background); color: var(--color-text); line-height: 1.6; }
 
-  header {
-    background: var(--color-primary);
-    color: var(--color-background);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    height: 70px; /* Mantiene la altura constante */
-    display: flex;
-    flex-direction: column;
-    transition: all 0.3s ease;
-  }
+    /* HEADER */
+    header {
+      background: var(--color-primary);
+      color: var(--color-background);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      height: 70px; /* Altura constante */
+      display: flex;
+      flex-direction: column;
+      transition: all 0.3s ease;
+      padding: 0 20px;
+    }
 
-  /* Logo y título */
-  .logo-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: transform 0.3s ease, opacity 0.3s ease;
-  }
+    .logo-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: transform 0.3s ease, opacity 0.3s ease;
+      overflow: hidden;
+    }
 
-  .logo-container img { height: 50px; margin-right: 10px; transition: height 0.3s ease; }
-  .logo-container h1 { font-size: 1.8rem; transition: font-size 0.3s ease; }
+    .logo-container img { height: 50px; margin-right: 10px; transition: height 0.3s ease; }
+    .logo-container h1 { font-size: 1.8rem; transition: font-size 0.3s ease; color: var(--color-background); }
 
-  /* Clase cuando hace scroll */
-  .header-scrolled .logo-container {
-    transform: scaleY(0);
-    opacity: 0;
-  }
+    .header-scrolled .logo-container {
+      transform: scaleY(0);
+      opacity: 0;
+    }
 
-  nav {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+    nav {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-  nav ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    transition: all 0.3s ease;
-  }
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 30px;
+      padding: 10px 0;
+    }
 
-  nav ul li a {
-    color: var(--color-background);
-    text-decoration: none;
-    font-weight: 500;
-    transition: color 0.3s ease;
-  }
+    nav ul li a {
+      color: var(--color-background);
+      text-decoration: none;
+      font-weight: 500;
+      padding: 5px 10px;
+      transition: color 0.3s ease;
+    }
 
-  nav ul li a:hover { color: var(--color-accent); }
+    nav ul li a:hover { color: var(--color-accent); }
 
-  /* Carrusel */
-  .carousel { position: relative; overflow: hidden; max-height: 500px; }
-  .carousel-inner { display: flex; transition: transform 1s ease; }
-  .carousel-item { min-width: 100%; position: relative; }
-  .carousel-item img { width: 100%; display: block; object-fit: cover; }
+    /* Carrusel */
+    .carousel { position: relative; overflow: hidden; max-height: 500px; }
+    .carousel-inner { display: flex; transition: transform 1s ease; }
+    .carousel-item { min-width: 100%; transition: opacity 1s ease; position: relative; }
+    .carousel-item img { width: 100%; display: block; object-fit: cover; }
 
-  /* Secciones */
-  section { padding: 4rem 2rem; text-align: center; }
-  section h2 { margin-bottom: 2rem; font-size: 2rem; color: var(--color-primary); }
+    /* Secciones */
+    section { padding: 4rem 2rem; text-align: center; }
+    section h2 { margin-bottom: 2rem; font-size: 2rem; color: var(--color-primary); }
 
-  .products {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-  }
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
 
-  .product {
-    border: 1px solid var(--color-accent);
-    border-radius: 8px;
-    padding: 1rem;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
+    .product {
+      border: 1px solid var(--color-accent);
+      border-radius: 8px;
+      padding: 1rem;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
 
-  .product:hover { transform: translateY(-5px); box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
+    .product:hover { transform: translateY(-5px); box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
 
-  .product img { width: 100%; border-radius: 8px; margin-bottom: 1rem; }
-  .product h3 { margin-bottom: 0.5rem; color: var(--color-secondary); }
-  .product p { margin-bottom: 0.5rem; }
-  .product .price { font-weight: bold; color: var(--color-primary); }
+    .product img { width: 100%; border-radius: 8px; margin-bottom: 1rem; }
+    .product h3 { margin-bottom: 0.5rem; color: var(--color-secondary); }
+    .product p { margin-bottom: 0.5rem; }
+    .product .price { font-weight: bold; color: var(--color-primary); }
 
-  footer { background: var(--color-primary); color: var(--color-background); text-align: center; padding: 2rem 1rem; }
+    footer { background: var(--color-primary); color: var(--color-background); text-align: center; padding: 2rem 1rem; }
 
-  .search-bar { margin: 2rem auto; max-width: 600px; display: flex; }
-  .search-bar input { flex: 1; padding: 0.75rem; border: 1px solid var(--color-accent); border-radius: 4px 0 0 4px; outline: none; }
-  .search-bar button { padding: 0.75rem 1.5rem; border: none; background: var(--color-primary); color: var(--color-background); cursor: pointer; border-radius: 0 4px 4px 0; transition: background 0.3s ease; }
-  .search-bar button:hover { background: var(--color-secondary); }
-</style>
+    .search-bar { margin: 2rem auto; max-width: 600px; display: flex; }
+    .search-bar input { flex: 1; padding: 0.75rem; border: 1px solid var(--color-accent); border-radius: 4px 0 0 4px; outline: none; }
+    .search-bar button { padding: 0.75rem 1.5rem; border: none; background: var(--color-primary); color: var(--color-background); cursor: pointer; border-radius: 0 4px 4px 0; transition: background 0.3s ease; }
+    .search-bar button:hover { background: var(--color-secondary); }
+
+  </style>
 </head>
 <body>
-<header id="mainHeader">
-  <div class="logo-container">
-    <img src="images/LOGOE.png" alt="Logo">
-    <h1>EREBUS</h1>
+  <header id="mainHeader">
+    <div class="logo-container">
+      <img src="images/LOGOE.png" alt="Logo">
+      <h1>EREBUS</h1>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#ropa">Ropa</a></li>
+        <li><a href="#perfumes">Perfumes</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Carrusel -->
+  <section class="carousel" id="inicio">
+    <div class="carousel-inner">
+      <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+1" alt="Slide 1"></div>
+      <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+2" alt="Slide 2"></div>
+      <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+3" alt="Slide 3"></div>
+    </div>
+  </section>
+
+  <!-- Buscador -->
+  <div class="search-bar">
+    <input type="text" id="searchInput" placeholder="Buscar productos...">
+    <button onclick="searchProducts()">Buscar</button>
   </div>
-  <nav>
-    <ul>
-      <li><a href="#inicio">Inicio</a></li>
-      <li><a href="#ropa">Ropa</a></li>
-      <li><a href="#perfumes">Perfumes</a></li>
-      <li><a href="#contacto">Contacto</a></li>
-    </ul>
-  </nav>
-</header>
 
-<!-- Carrusel -->
-<section class="carousel" id="inicio">
-  <div class="carousel-inner">
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+1" alt="Slide 1"></div>
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+2" alt="Slide 2"></div>
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+3" alt="Slide 3"></div>
-  </div>
-</section>
+  <!-- Productos Ropa -->
+  <section id="ropa">
+    <h2>Nuestra Ropa</h2>
+    <div class="products" id="ropaProducts"></div>
+  </section>
 
-<!-- Buscador -->
-<div class="search-bar">
-  <input type="text" id="searchInput" placeholder="Buscar productos...">
-  <button onclick="searchProducts()">Buscar</button>
-</div>
+  <!-- Productos Perfumes -->
+  <section id="perfumes">
+    <h2>Nuestros Perfumes</h2>
+    <div class="products" id="perfumeProducts"></div>
+  </section>
 
-<!-- Productos Ropa -->
-<section id="ropa">
-  <h2>Nuestra Ropa</h2>
-  <div class="products" id="ropaProducts"></div>
-</section>
+  <!-- Contacto -->
+  <section id="contacto">
+    <h2>Contacto</h2>
+    <p>Email: contacto@tutienda.com</p>
+    <p>Tel: +34 600 123 456</p>
+  </section>
 
-<!-- Productos Perfumes -->
-<section id="perfumes">
-  <h2>Nuestros Perfumes</h2>
-  <div class="products" id="perfumeProducts"></div>
-</section>
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
+  </footer>
 
-<!-- Contacto -->
-<section id="contacto">
-  <h2>Contacto</h2>
-  <p>Email: contacto@tutienda.com</p>
-  <p>Tel: +34 600 123 456</p>
-</section>
-
-<!-- Footer -->
-<footer>
-  <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
-</footer>
-
-<script>
-  // Carrusel
-  const carouselInner = document.querySelector('.carousel-inner');
-  const carouselItems = document.querySelectorAll('.carousel-item');
-  let index = 0;
-
-  function showNextSlide() {
-    index = (index + 1) % carouselItems.length;
-    carouselInner.style.transform = `translateX(-${index * 100}%)`;
-  }
-  setInterval(showNextSlide, 3000);
-
-  // Productos
-  const products = [
-    { id: 1, name: "PLAYERA OVERSIZE NEGRA 220G", description: "Comodidad superior y una sensación de alta calidad.", price: "$220.00", image: "images/PLAYERANEGRA1.png", category: "ropa", keywords: "PLAYERA OVERSIZE NEGRA 220G" },
-    { id: 2, name: "Pantalón Chino", description: "Cómodo y versátil para cualquier ocasión.", price: "€55.00", image: "https://via.placeholder.com/300x200", category: "ropa", keywords: "pantalón chino casual" },
-    { id: 3, name: "Vestido de Noche", description: "Ideal para eventos formales.", price: "€120.00", image: "https://via.placeholder.com/300x200", category: "ropa", keywords: "vestido noche elegante formal" },
-    { id: 4, name: "Chaqueta de Cuero", description: "Un clásico que nunca pasa de moda.", price: "€150.00", image: "https://via.placeholder.com/300x200", category: "ropa", keywords: "chaqueta cuero moda" },
-    { id: 5, name: "Perfume Floral", description: "Aroma fresco y duradero.", price: "€70.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume floral aroma fresco" },
-    { id: 6, name: "Perfume Amaderado", description: "Notas profundas y masculinas.", price: "€85.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume amaderado intenso" },
-    { id: 7, name: "Perfume Cítrico", description: "Energía y frescura en cada gota.", price: "€65.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume cítrico fresco" },
-    { id: 8, name: "Perfume Dulce", description: "Dulzura irresistible y sofisticada.", price: "€90.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume dulce sofisticado" }
-  ];
-
-  function renderProducts() {
-    const ropaContainer = document.getElementById('ropaProducts');
-    const perfumeContainer = document.getElementById('perfumeProducts');
-    ropaContainer.innerHTML = '';
-    perfumeContainer.innerHTML = '';
-
-    products.forEach(product => {
-      const div = document.createElement('div');
-      div.classList.add('product');
-      div.innerHTML = `
-        <img src="${product.image}" alt="${product.name}">
-        <h3>${product.name}</h3>
-        <p>${product.description}</p>
-        <p class="price">${product.price}</p>
-      `;
-      if (product.category === 'ropa') ropaContainer.appendChild(div);
-      else perfumeContainer.appendChild(div);
-    });
-  }
-
-  function searchProducts() {
-    const query = document.getElementById('searchInput').value.toLowerCase();
-    const filtered = products.filter(p => p.name.toLowerCase().includes(query) || p.keywords.includes(query));
-    const ropaContainer = document.getElementById('ropaProducts');
-    const perfumeContainer = document.getElementById('perfumeProducts');
-    ropaContainer.innerHTML = '';
-    perfumeContainer.innerHTML = '';
-
-    filtered.forEach(product => {
-      const div = document.createElement('div');
-      div.classList.add('product');
-      div.innerHTML = `
-        <img src="${product.image}" alt="${product.name}">
-        <h3>${product.name}</h3>
-        <p>${product.description}</p>
-        <p class="price">${product.price}</p>
-      `;
-      if (product.category === 'ropa') ropaContainer.appendChild(div);
-      else perfumeContainer.appendChild(div);
-    });
-  }
-
-  renderProducts();
-
-  // Scroll header
-  const header = document.getElementById('mainHeader');
-  window.addEventListener('scroll', () => {
-    if (window.scrollY > 50) {
-      header.classList.add('header-scrolled');
-    } else {
-      header.classList.remove('header-scrolled');
+  <script>
+    // Carrusel
+    const carouselInner = document.querySelector('.carousel-inner');
+    const carouselItems = document.querySelectorAll('.carousel-item');
+    let index = 0;
+    function showNextSlide() {
+      index = (index + 1) % carouselItems.length;
+      carouselInner.style.transform = `translateX(-${index * 100}%)`;
     }
-  });
-</script>
+    setInterval(showNextSlide, 3000);
+
+    // Productos
+    const products = [
+      { id: 1, name: "PLAYERA OVERSIZE NEGRA 220G", description: "Comodidad superior y una sensación de alta calidad.", price: "$220.00", image: "images/PLAYERANEGRA1.png", category: "ropa", keywords: "PLAYERA OVERSIZE NEGRA 220G" },
+      { id: 2, name: "Pantalón Chino", description: "Cómodo y versátil para cualquier ocasión.", price: "€55.00", image: "https://via.placeholder.com/300x200", category: "ropa", keywords: "pantalón chino casual" },
+      { id: 3, name: "Vestido de Noche", description: "Ideal para eventos formales.", price: "€120.00", image: "https://via.placeholder.com/300x200", category: "ropa", keywords: "vestido noche elegante formal" },
+      { id: 4, name: "Chaqueta de Cuero", description: "Un clásico que nunca pasa de moda.", price: "€150.00", image: "https://via.placeholder.com/300x200", category: "ropa", keywords: "chaqueta cuero moda" },
+      { id: 5, name: "Perfume Floral", description: "Aroma fresco y duradero.", price: "€70.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume floral aroma fresco" },
+      { id: 6, name: "Perfume Amaderado", description: "Notas profundas y masculinas.", price: "€85.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume amaderado intenso" },
+      { id: 7, name: "Perfume Cítrico", description: "Energía y frescura en cada gota.", price: "€65.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume cítrico fresco" },
+      { id: 8, name: "Perfume Dulce", description: "Dulzura irresistible y sofisticada.", price: "€90.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume dulce sofisticado" }
+    ];
+
+    function renderProducts() {
+      const ropaContainer = document.getElementById('ropaProducts');
+      const perfumeContainer = document.getElementById('perfumeProducts');
+      ropaContainer.innerHTML = '';
+      perfumeContainer.innerHTML = '';
+      products.forEach(product => {
+        const div = document.createElement('div');
+        div.classList.add('product');
+        div.innerHTML = `
+          <img src="${product.image}" alt="${product.name}">
+          <h3>${product.name}</h3>
+          <p>${product.description}</p>
+          <p class="price">${product.price}</p>
+        `;
+        if (product.category === 'ropa') ropaContainer.appendChild(div);
+        else perfumeContainer.appendChild(div);
+      });
+    }
+
+    function searchProducts() {
+      const query = document.getElementById('searchInput').value.toLowerCase();
+      const filtered = products.filter(p => p.name.toLowerCase().includes(query) || p.keywords.includes(query));
+      const ropaContainer = document.getElementById('ropaProducts');
+      const perfumeContainer = document.getElementById('perfumeProducts');
+      ropaContainer.innerHTML = '';
+      perfumeContainer.innerHTML = '';
+      filtered.forEach(product => {
+        const div = document.createElement('div');
+        div.classList.add('product');
+        div.innerHTML = `
+          <img src="${product.image}" alt="${product.name}">
+          <h3>${product.name}</h3>
+          <p>${product.description}</p>
+          <p class="price">${product.price}</p>
+        `;
+        if (product.category === 'ropa') ropaContainer.appendChild(div);
+        else perfumeContainer.appendChild(div);
+      });
+    }
+
+    renderProducts();
+
+    // Animación scroll
+    const header = document.getElementById('mainHeader');
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 50) {
+        header.classList.add('header-scrolled');
+      } else {
+        header.classList.remove('header-scrolled');
+      }
+    });
+  </script>
 </body>
 </html>
