--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
   .logo-container img { height: 50px; margin-right: 10px; transition: all 0.3s ease; }
   .logo-container h1 { font-size: 1.8rem; transition: all 0.3s ease; }
 
-  .header-hidden .logo-container { height: 0; transform: translateY(-100%); }
+  .header-hidden .logo-container {
+    height: 0;
+    transform: translateY(-100%);
+  }
+
   .header-hidden nav ul { margin-top: 0; }
 
   nav ul {
@@ -52,262 +56,65 @@
     transition: all 0.3s ease;
   }
 
-  nav ul li a { color: var(--color-background); text-decoration: none; font-weight: 500; transition: color 0.3s ease; }
-  nav ul li a:hover { color: var(--color-accent); }
-
-  .carousel { position: relative; overflow: hidden; max-height: 500px; margin-top: 70px; }
-  .carousel-inner { display: flex; transition: transform 1s ease; }
-  .carousel-item { min-width: 100%; transition: opacity 1s ease; position: relative; }
-  .carousel-item img, .carousel-item video { width: 100%; height: 500px; object-fit: cover; display: block; }
-
-  section { padding: 4rem 2rem; text-align: center; }
-  section h2 { margin-bottom: 2rem; font-size: 2rem; color: var(--color-primary); }
-
-  .products { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
-  .product {
-    border: 1px solid var(--color-accent);
-    border-radius: 8px;
-    padding: 1rem;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
-  .product:hover { transform: translateY(-5px); box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
-  .product img { width: 100%; border-radius: 8px; margin-bottom: 1rem; }
-  .product h3 { margin-bottom: 0.5rem; color: var(--color-secondary); }
-  .product p { margin-bottom: 0.5rem; }
-  .product .price { font-weight: bold; color: var(--color-primary); }
-
-  footer { background: var(--color-primary); color: var(--color-background); text-align: center; padding: 2rem 1rem; }
-
-  .search-bar { margin: 2rem auto; max-width: 600px; display: flex; }
-  .search-bar input { flex: 1; padding: 0.75rem; border: 1px solid var(--color-accent); border-radius: 4px 0 0 4px; outline: none; }
-  .search-bar button { padding: 0.75rem 1.5rem; border: none; background: var(--color-primary); color: var(--color-background); cursor: pointer; border-radius: 0 4px 4px 0; transition: background 0.3s ease; }
-  .search-bar button:hover { background: var(--color-secondary); }
-</style>
-</head>
-<body>
-
-<header id="mainHeader">
-  <div class="logo-container">
-    <img src="images/LOGOE.png" alt="Logo">
-    <h1>EREBUS</h1>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="#inicio">Inicio</a></li>
-      <li><a href="#ropa">Ropa</a></li>
-      <li><a href="#perfumes">Perfumes</a></li>
-      <li><a href="#contacto">Contacto</a></li>
-    </ul>
-  </nav>
-</header>
-
-<!-- Carrusel -->
-<section class="carousel" id="inicio">
-  <div class="carousel-inner">
-    <!-- Video Slide -->
-    <div class="carousel-item">
-      <video id="video1" muted autoplay loop playsinline>
-        <source src="VIDEO1.mp4" type="video/mp4">
-        Tu navegador no soporta el video.
-      </video>
-    </div>
-    <!-- Imágenes -->
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+2" alt="Slide 2"></div>
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+3" alt="Slide 3"></div>
-  </div>
-</section>
-
-<!-- Buscador -->
-<div class="search-bar">
-  <input type="text" id="searchInput" placeholder="Buscar productos...">
-  <button onclick="searchProducts()">Buscar</button>
-</div>
-
-<!-- Productos Ropa -->
-<section id="ropa">
-  <h2>Nuestra Ropa</h2>
-  <div class="products" id="ropaProducts"></div>
-</section>
-
-<!-- Productos Perfumes -->
-<section id="perfumes">
-  <h2>Nuestros Perfumes</h2>
-  <div class="products" id="perfumeProducts"></div>
-</section>
-
-<!-- Contacto -->
-<section id="contacto">
-  <h2>Contacto</h2>
-  <p>Email: contacto@tutienda.com</p>
-  <p>Tel: +34 600 123 456</p>
-</section>
-
-<!-- Footer -->
-<footer>
-  <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
-</footer>
-
-<script>
-  // Carrusel
-  const carouselInner = document.querySelector('.carousel-inner');
-  const carouselItems = document.querySelectorAll('.carousel-item');
-  let index = 0;
-
-  function showNextSlide() {
-    // Pausar todos los videos
-    document.querySelectorAll('.carousel-item video').forEach(video => video.pause());
-
-    index = (index + 1) % carouselItems.length;
-    carouselInner.style.transform = `translateX(-${index * 100}%)`;
-
-    // Reproducir video si existe
-    const currentVideo = carouselItems[index].querySelector('video');
-    if(currentVideo) currentVideo.play();
-  }
-
-  setInterval(showNextSlide, 5000); // Cambia cada 5 segundos
-
-  // Productos
-  const products = [
-    { id: 1, name: "PLAYERA OVERSIZE NEGRA 220G", description: "Comodidad superior y sensación de alta calidad.", price: "$220.00", image: "images/PLAYERANEGRA1.png", category: "ropa", keywords: "PLAYERA OVERSIZE NEGRA 220G" },
-    { id: 2, name: "Pantalón Chino", description: "Cómodo y versátil.", price: "€55.00", image: "https://via.placeholder.com/300x200", category: "ropa", keywords: "pantalón chino casual" },
-    { id: 3, name: "Vestido de Noche", description: "Ideal para eventos formales.", price: "€120.00", image: "https://via.placeholder.com/300x200", category: "ropa", keywords: "vestido noche elegante formal" },
-    { id: 4, name: "Chaqueta de Cuero", description: "Un clásico que nunca pasa de moda.", price: "€150.00", image: "https://via.placeholder.com/300x200", category: "ropa", keywords: "chaqueta cuero moda" },
-    { id: 5, name: "Perfume Floral", description: "Aroma fresco y duradero.", price: "€70.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume floral aroma fresco" },
-    { id: 6, name: "Perfume Amaderado", description: "Notas profundas y masculinas.", price: "€85.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume amaderado intenso" },
-    { id: 7, name: "Perfume Cítrico", description: "Energía y frescura.", price: "€65.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume cítrico fresco" },
-    { id: 8, name: "Perfume Dulce", description: "Dulzura irresistible y sofisticada.", price: "€90.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume dulce sofisticado" }
-  ];
-
-  function renderProducts() {
-    const ropaContainer = document.getElementById('ropaProducts');
-    const perfumeContainer = document.getElementById('perfumeProducts');
-    ropaContainer.innerHTML = '';
-    perfumeContainer.innerHTML = '';
-
-    products.forEach(product => {
-      const div = document.createElement('div');
-      div.classList.add('product');
-      div.innerHTML = `
-        <img src="${product.image}" alt="${product.name}">
-        <h3>${product.name}</h3>
-        <p>${product.description}</p>
-        <p class="price">${product.price}</p>
-      `;
-      if(product.category === 'ropa') ropaContainer.appendChild(div);
-      else perfumeContainer.appendChild(div);
-    });
-  }
-
-  function searchProducts() {
-    const query = document.getElementById('searchInput').value.toLowerCase();
-    const filtered = products.filter(p => p.name.toLowerCase().includes(query) || p.keywords.toLowerCase().includes(query));
-    const ropaContainer = document.getElementById('ropaProducts');
-    const perfumeContainer = document.getElementById('perfumeProducts');
-    ropaContainer.innerHTML = '';
-    perfumeContainer.innerHTML = '';
-
-    filtered.forEach(product => {
-      const div = document.createElement('div');
-      div.classList.add('product');
-      div.innerHTML = `
-        <img src="${product.image}" alt="${product.name}">
-        <h3>${product.name}</h3>
-        <p>${product.description}</p>
-        <p class="price">${product.price}</p>
-      `;
-      if(product.category === 'ropa') ropaContainer.appendChild(div);
-      else perfumeContainer.appendChild(div);
-    });
-  }
-
-  renderProducts();
-
-  // Animación del header al hacer scroll
-  const header = document.getElementById('mainHeader');
-  let lastScrollTop = 0;
-  window.addEventListener('scroll', () => {
-    const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
-    if(scrollTop > lastScrollTop && scrollTop > 50) header.classList.add('header-hidden');
-    else header.classList.remove('header-hidden');
-    lastScrollTop = scrollTop <= 0 ? 0 : scrollTop;
-  });
-</script>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EREBUS</title>
-<style>
-  :root {
-    --color-primary: #000;
-    --color-secondary: #555;
-    --color-background: #fff;
-    --color-accent: #e0e0e0;
-    --color-text: #333;
-    --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-
-  * { margin: 0; padding: 0; box-sizing: border-box; }
-  body { font-family: var(--font-family); background-color: var(--color-background); color: var(--color-text); line-height: 1.6; }
-
-  header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background: var(--color-primary);
+  nav ul li a {
     color: var(--color-background);
-    z-index: 1000;
-    transition: all 0.3s ease;
+    text-decoration: none;
+    font-weight: 500;
+    transition: color 0.3s ease;
   }
 
-  .logo-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 70px;
-    transition: all 0.3s ease;
-    overflow: hidden;
-  }
-
-  .logo-container img { height: 50px; margin-right: 10px; transition: all 0.3s ease; }
-  .logo-container h1 { font-size: 1.8rem; transition: all 0.3s ease; }
-
-  .header-hidden .logo-container { height: 0; transform: translateY(-100%); }
-  .header-hidden nav ul { margin-top: 0; }
-
-  nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    background: var(--color-primary);
-    padding: 10px 0;
-    transition: all 0.3s ease;
-  }
-
-  nav ul li a { color: var(--color-background); text-decoration: none; font-weight: 500; transition: color 0.3s ease; }
   nav ul li a:hover { color: var(--color-accent); }
 
-  .carousel { position: relative; overflow: hidden; max-height: 500px; margin-top: 70px; }
-  .carousel-inner { display: flex; transition: transform 1s ease; }
-  .carousel-item { min-width: 100%; transition: opacity 1s ease; position: relative; }
-  .carousel-item img, .carousel-item video { width: 100%; height: 500px; object-fit: cover; display: block; }
+  /* Video de fondo */
+  #background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+  }
+
+  .carousel {
+    position: relative;
+    overflow: hidden;
+    max-height: 500px;
+    margin-top: 70px;
+  }
+
+  .carousel-inner {
+    display: flex;
+    transition: transform 1s ease;
+  }
+
+  .carousel-item {
+    min-width: 100%;
+    transition: opacity 1s ease;
+    position: relative;
+  }
 
   section { padding: 4rem 2rem; text-align: center; }
   section h2 { margin-bottom: 2rem; font-size: 2rem; color: var(--color-primary); }
 
-  .products { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
+  .products {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+  }
+
   .product {
     border: 1px solid var(--color-accent);
     border-radius: 8px;
     padding: 1rem;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
-  .product:hover { transform: translateY(-5px); box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
+
+  .product:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+  }
+
   .product img { width: 100%; border-radius: 8px; margin-bottom: 1rem; }
   .product h3 { margin-bottom: 0.5rem; color: var(--color-secondary); }
   .product p { margin-bottom: 0.5rem; }
@@ -338,19 +145,18 @@
   </nav>
 </header>
 
-<!-- Carrusel -->
+<!-- Carrusel con video -->
 <section class="carousel" id="inicio">
+  <!-- Video de fondo -->
+  <video id="background-video" autoplay muted loop playsinline>
+    <source src="VIDEO1.mp4" type="video/mp4">
+    Tu navegador no soporta el video.
+  </video>
+
   <div class="carousel-inner">
-    <!-- Video Slide -->
-    <div class="carousel-item">
-      <video id="video1" muted autoplay loop playsinline>
-        <source src="VIDEO1.mp4" type="video/mp4">
-        Tu navegador no soporta el video.
-      </video>
-    </div>
-    <!-- Imágenes -->
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+2" alt="Slide 2"></div>
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+3" alt="Slide 3"></div>
+    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Slide+1" alt="Slide 1"></div>
+    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Slide+2" alt="Slide 2"></div>
+    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Slide+3" alt="Slide 3"></div>
   </div>
 </section>
 
@@ -379,7 +185,6 @@
   <p>Tel: +34 600 123 456</p>
 </section>
 
-<!-- Footer -->
 <footer>
   <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
 </footer>
@@ -391,18 +196,10 @@
   let index = 0;
 
   function showNextSlide() {
-    // Pausar todos los videos
-    document.querySelectorAll('.carousel-item video').forEach(video => video.pause());
-
     index = (index + 1) % carouselItems.length;
     carouselInner.style.transform = `translateX(-${index * 100}%)`;
-
-    // Reproducir video si existe
-    const currentVideo = carouselItems[index].querySelector('video');
-    if(currentVideo) currentVideo.play();
   }
-
-  setInterval(showNextSlide, 5000); // Cambia cada 5 segundos
+  setInterval(showNextSlide, 3000);
 
   // Productos
   const products = [
@@ -431,7 +228,7 @@
         <p>${product.description}</p>
         <p class="price">${product.price}</p>
       `;
-      if(product.category === 'ropa') ropaContainer.appendChild(div);
+      if (product.category === 'ropa') ropaContainer.appendChild(div);
       else perfumeContainer.appendChild(div);
     });
   }
@@ -453,7 +250,7 @@
         <p>${product.description}</p>
         <p class="price">${product.price}</p>
       `;
-      if(product.category === 'ropa') ropaContainer.appendChild(div);
+      if (product.category === 'ropa') ropaContainer.appendChild(div);
       else perfumeContainer.appendChild(div);
     });
   }
@@ -463,10 +260,15 @@
   // Animación del header al hacer scroll
   const header = document.getElementById('mainHeader');
   let lastScrollTop = 0;
+
   window.addEventListener('scroll', () => {
     const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
-    if(scrollTop > lastScrollTop && scrollTop > 50) header.classList.add('header-hidden');
-    else header.classList.remove('header-hidden');
+
+    if(scrollTop > lastScrollTop && scrollTop > 50){
+      header.classList.add('header-hidden');
+    } else {
+      header.classList.remove('header-hidden');
+    }
     lastScrollTop = scrollTop <= 0 ? 0 : scrollTop;
   });
 </script>
